@@ -21,7 +21,7 @@
     <cnnarch-generator.version>0.0.6-SNAPSHOT</cnnarch-generator.version>
     <cnnarch-mxnet-generator.version>0.2.17-SNAPSHOT</cnnarch-mxnet-generator.version>
     <cnnarch-caffe2-generator.version>0.2.14-SNAPSHOT</cnnarch-caffe2-generator.version>
-    <cnnarch-gluon-generator.version>0.2.10-20200416.091906-5</cnnarch-gluon-generator.version>
+    <cnnarch-gluon-generator.version>0.2.11-SNAPSHOT</cnnarch-gluon-generator.version>
     <cnnarch-tensorflow-generator.version>0.1.0-SNAPSHOT</cnnarch-tensorflow-generator.version>
     <Common-MontiCar.version>0.0.19-SNAPSHOT</Common-MontiCar.version>
     <embedded-montiarc-math-opt-generator>0.1.6</embedded-montiarc-math-opt-generator>
@@ -227,24 +227,12 @@
       <!-- Source Jar Configuration -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${source.plugin}</version>
-        <executions>
-          <execution>
-            <id>create source jar</id>
-            <phase>package</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-            <configuration>
-              <excludeResources>false</excludeResources>
-              <includes>
-                <include>**/*.java</include>
-                <include>**/*.ftl</include>
-              </includes>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
 	    <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
